# pyppl_rich

./: .pre-commit-config.yaml  .tagitrc  README.md  pyppl_rich.py  pyproject.toml  requirements.txt  setup.py  tox.ini
tests/: pipeline1.py  test_rich.py
