[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyppl_rich"
version = "0.0.4"
description = "Richer information in logs for PyPPL"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyppl = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
cmdy = "*"

[tool.poetry.plugins.pyppl]
pyppl_rich = "pyppl_rich"
